# Gendiff

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  output.txt  pyproject.toml
.github/workflows/: main.yaml
gendiff/: __init__.py  gendiff.py  gendiff_logic.py  generate.py  generate_diff.py  get_difference.py  parser.py  stylish.py
gendiff/formatters/: form_selector.py  formatter_json.py  formatter_plain.py  formatter_stylish.py
gendiff/scripts/: gendiff.py
tests/: generate_diff_test.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_stylish.py  test_gendiff_yaml.py  test_gendiff_yml.py
tests/fixtures/: file1_for_tests.txt  file2_for_tests.txt  result_json.txt
