[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
first_file = "gendiff.scripts.gendiff:first_file"
second_file = "gendiff.scripts.gendiff:second_file"
