[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
file_path1 = "gendiff.scripts.gendiff:file_path1"
file_path2 = "gendiff.scripts.gendiff:file_path2"

